<resources>
    <string name="app_name">E-Com</string>
    <string name="app">Bài đăng</string>
    <string name="search">Search</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_product">Lọc sản phẩm</string>
    <string name="confirm">Xác nhận</string>
    <string name="cancel">Huỷ</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="product_price">Giá</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="count">Số lượng</string>
    <string name="buy_now">Mua ngay</string>
    <string name="contact_now">Liên hệ ngay: </string>
    <string name="select_all">Chọn tất cả</string>
    <string name="have_not_account_register">Chưa có tài khoản? Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="save_account">Lưu tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="valid">valid</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="product_type">Loại sản phẩm</string>
    <string name="view_more">Xem thêm</string>
    <string name="error_happened">Có lỗi xảy ra</string>
    <string name="error">Lỗi</string>
    <string name="ok">Ok</string>
    <string name="no_internet_connection">Không có kết nối Internet</string>
    <string name="time_out">Timeout</string>
    <string name="trademark">Thương hiệu</string>
    <string name="list_products">Danh sách sản phẩm</string>
    <string name="created_date">\"Ngày tạo: \"</string>
</resources>
