<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="6dp"
    app:cardElevation="2dp">


    <!--    <com.facebook.shimmer.ShimmerFrameLayout-->
    <!--        android:id="@+id/shimmer_loading"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <!--        <View-->
    <!--            android:background="@color/light_gray"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:scaleType="centerCrop"/>-->

    <!--    </com.facebook.shimmer.ShimmerFrameLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

        <CheckBox
            android:checked="true"
            android:id="@+id/chkDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:src="@android:color/holo_blue_light" />

        <TextView
            android:id="@+id/txtProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="6dp"
            android:layout_toEndOf="@+id/imgProduct"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/product_name"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProductName"
            android:layout_marginStart="6dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/imgProduct"
            android:text="@string/product_price"
            android:textColor="@color/red_600"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtCountLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/txtProductPrice"
            android:layout_alignBottom="@id/txtProductPrice"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/count"
            android:textColor="@color/red_600"
            android:textSize="14sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/txtInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtProductPrice"
            android:layout_marginStart="6dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/imgProduct"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="Info"
            android:textSize="14sp" />

        <Button
            android:background="@null"
            android:id="@+id/btnDesc"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/btnAsc"
            android:layout_toStartOf="@id/txtProductCount"
            android:text="-"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtProductCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/btnAsc"
            android:layout_alignBottom="@id/btnAsc"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_toStartOf="@id/btnAsc"
            android:gravity="center"
            android:text="5"
            android:textColor="@color/red_600" />

        <Button
            android:background="@null"
            android:id="@+id/btnAsc"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="+"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/txtBuyNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/imgProduct"
            android:layout_alignTop="@id/btnAsc"
            android:layout_alignBottom="@id/btnAsc"
            android:gravity="center"
            android:text="@string/buy_now"
            android:textColor="@color/red_600"
            android:textSize="20dp" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
